# serial-analyzer

./: CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: build.yml
cmake/: ExternalAnalyzerSDK.cmake
src/: MySerialAnalyzer.cpp  MySerialAnalyzer.h  MySerialAnalyzerResults.cpp  MySerialAnalyzerResults.h  MySerialAnalyzerSettings.cpp  MySerialAnalyzerSettings.h  MySerialSimulationDataGenerator.cpp  MySerialSimulationDataGenerator.h  SerialAnalyzer.cpp  SerialAnalyzer.h  SerialAnalyzerResults.cpp  SerialAnalyzerResults.h  SerialAnalyzerSettings.cpp  SerialAnalyzerSettings.h  SerialSimulationDataGenerator.cpp  SerialSimulationDataGenerator.h
